edit controllers PetController & ClientController -> returned data types have been added, method names have been set, succes testing fron ClinicClient
